--- a/cardOne.css
+++ b/cardOne.css
@@ -10,7 +10,6 @@
     justify-content: space-between;
     width:50%;
     margin:auto;
-    margin-top:100px;
 }
 
 .head-text{
@@ -51,6 +50,7 @@
     padding-bottom:150px;
     text-align:center;
     box-shadow:2px 2px 5px gray;
+    margin-bottom: 30px;
 }
 
 .card-head-text{
@@ -74,4 +74,48 @@ a{
     font-size:20px;
     color:red;
     text-decoration: none;
+}
+
+@media (max-width:480px){
+    .cards-heading-container{
+        width:70%;
+    }
+    .head-text{
+        width:200px;
+        padding:0px;
+        font-size:30px;
+    }
+    span{
+        display : none;
+    }
+    .list-text{
+        width:50px;
+        padding:0px;
+        padding-top:40px;
+        padding-left:10px;
+        font-size:10px;
+    }
+    .card-main-container{
+        flex-direction: column;
+        width:70%;
+    }
+    .card-body-text{
+        display: none;
+    }
+    .check-box{
+        display:none;
+    }
+    .card-head-text{
+        text-align: left;
+        padding-left:20px;
+    }
+    .card-container{
+        width:100%;
+        box-sizing: border-box;
+        padding:2px;
+        margin:5px;
+    }
+    .pagination{
+        margin:20px;
+    }
 }
