--- a/cardThree.css
+++ b/cardThree.css
@@ -43,3 +43,13 @@ a{
     color:red;
     text-decoration: none;
 }
+
+@media(max-width:480px){
+    .pagination{
+        margin-top: 50px;
+    }
+    .card-container{
+        padding-top:20px;
+        padding-bottom:20px;
+    }
+}
