--- a/cardThree.css
+++ b/cardThree.css
@@ -1,12 +1,100 @@
+html, body {
+    overflow: auto;
+}
 .main{
-    margin:auto;
-    margin-top:200px;
-    margin-bottom:30px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    display:flex;
+    flex-direction:column;
+    width:100%;
+    position:absolute;
+    opacity:0.7;
+    filter: blur(10px);
+}
+
+.cards-heading-container{
+    display:flex;
+    justify-content: space-between;
+    width:50%;
+    margin:auto;
+}
+
+.head-text{
+    width:200px;
+    box-sizing:border-box;
+    padding:20px;
+    font-size:30px;
+}
+
+.list-text{
+    display: inline-block;
+    width:200px;
+    box-sizing:border-box;
+    padding-top:50px;
+    padding-left:50px;
+    font-size:20px;
+}
+
+.fa-plus-circle{
+    font-size:25px;
+    color:red;
+}
+
+.card-main-container{
+    display: flex;
+    flex-wrap:wrap;
+    justify-content: space-between;
+    width:50%;
+    height:50%;
+    margin:auto;
+    margin-top:0px;
 }
 
 .card-container{
-    width : 300px;
+    width : 200px;
+    border:1px solid red;
+    border-radius:10px;
+    padding-bottom:150px;
+    text-align:center;
+    box-shadow:2px 2px 5px gray;
+    margin-bottom: 30px;
+}
+
+.card-head-text{
+    color:red;
+    text-align: center;
+    font-size: 20px;
+}
+
+.card-body-text{
+    margin-right:0px;
+    margin-left:40px;
+    color:red;
+}
+
+.pagination{
+    text-align:center;
+    margin:40px;
+}
+
+a{
+    font-size:20px;
+    color:red;
+    text-decoration: none;
+}
+.top-container{
+    display: flex;
+    justify-content: center;
+    margin-top:200px;
+}
+.main-head{
+    display:flex;
+    flex-direction: column;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    position:relative;
+    z-index :10;
+}
+
+.card-container-head{
     border:1px solid red;
     border-radius:10px;
     box-shadow:2px 2px 5px gray;
@@ -18,8 +106,12 @@
 input[type = "text"]{
     border:1px solid red;
     border-radius: 5px;
+    display: block;
     padding:5px;
-    margin-bottom: 15px;
+    margin-top:10px;
+    margin-bottom:5px;
+    margin-left:50px;
+    margin-right:50px;
 }
 
 button{
@@ -27,14 +119,14 @@ button{
     background-color: red;
     color:white;
     border-radius: 15px;
+    margin-top:0px;
     padding:5px 10px;
     margin-bottom:15px;
-    
 }
 
-.pagination{
+.pagination-head{
     text-align :center;
-    margin-top: 100px;
+    margin-top: 30px;
 }
 
 a{
@@ -45,10 +137,51 @@ a{
 }
 
 @media(max-width:480px){
-    .pagination{
-        margin-top: 50px;
+    .cards-heading-container{
+        width:70%;
+    }
+    .head-text{
+        width:200px;
+        padding:0px;
+        font-size:30px;
+    }
+    span{
+        display : none;
+    }
+    .list-text{
+        width:50px;
+        padding:0px;
+        padding-top:40px;
+        padding-left:10px;
+        font-size:10px;
+    }
+    .card-main-container{
+        flex-direction: column;
+        width:70%;
+    }
+    .card-body-text{
+        display: none;
+    }
+    .check-box{
+        display:none;
+    }
+    .card-head-text{
+        text-align: left;
+        padding-left:20px;
     }
     .card-container{
+        width:100%;
+        box-sizing: border-box;
+        padding:2px;
+        margin:5px;
+    }
+    .pagination{
+        margin:20px;
+    }
+    .pagination-head{
+        margin-top: 50px;
+    }
+    .card-container-head{
         padding-top:20px;
         padding-bottom:20px;
     }
