--- a/cardTwo.css
+++ b/cardTwo.css
@@ -3,9 +3,9 @@ body{
 }
 
 .main{
-    margin:auto;
-    margin-top:100px;
-    margin-bottom:30px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
 }
 
 .head-block{
@@ -56,6 +56,7 @@ body{
 .fa-arrow-circle-left{
     font-size:25px;
     color:red;
+    align-self: center;
 }
 
 .fa-plus-circle{
@@ -67,6 +68,7 @@ body{
 }
 
 .pagination{
+    margin:30px;
     text-align :center;
 }
 
@@ -87,8 +89,14 @@ a{
     .head-block{
         display: none;
     }
+    .fa-arrow-circle-left{
+        font-size:2rem;
+        color:red;
+        align-self: center;
+        margin:5px;
+    }
     .mobile-head-block{
-        display: initial;
-        margin:20%;
+        display:initial;
+        text-align: center;
     }
 }
